@@ -1,6 +1,9 @@
 # ChangeLog for sci-visualization/asgl
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> asgl-1.3.2.ebuild, metadata.xml:
+  Bump to EAPI=5
 
   14 Mar 2011; Justin Lecher <jlec@gentoo.org> +files/1.3.2-gentoo.patch,
   asgl-1.3.2.ebuild:
